force-app/main/default/objects/OA_USASpending_Staging__c/OA_USASpending_Staging__c.object-meta.xml
<CustomObject>
    <description>Holds raw USASpending.gov award results per Lead, pending human review before any write-back to production Lead fields. One record per enrichment run per Lead. Public data only — no PII.</description>
    <label>USASpending Staging</label>
    <nameField>
        <displayFormat>USA-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USASpending Staging Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>