force-app/main/default/objects/OA_USASpending_Staging__c/fields/Auto_Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Auto_Verification_Method__c</fullName>
    <description>Which deterministic tier authorized the write.</description>
    <label>Auto Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier A UEI</fullName>
            </value>
            <value>
                <fullName>Tier B Provenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>