force-app/main/default/objects/OA_USASpending_Staging__c/fields/Auto_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Verified_Date__c</fullName>
    <label>Auto Verified Date</label>
    <description>Timestamp when all Tier A gates passed and the row became eligible to write.</description>
    <type>DateTime</type>
</CustomField>