force-app/main/default/objects/OA_USASpending_Staging__c/fields/Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>Award_Amount__c</fullName>
    <description>Dollar value of the top-ranked award returned. This is the single largest award, not total lifetime contract value.</description>
    <label>Award Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>