force-app/main/default/objects/OA_USASpending_Staging__c/fields/Award_Description__c.field-meta.xml
<CustomField>
    <fullName>Award_Description__c</fullName>
    <description>Contract description text from USASpending.gov (truncated to 500 chars). Useful for keyword-based routing by contract scope (IT, logistics, facilities, etc.).</description>
    <label>Award Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>