force-app/main/default/objects/OA_USASpending_Staging__c/fields/Award_ID__c.field-meta.xml
<CustomField>
    <fullName>Award_ID__c</fullName>
    <description>USASpending.gov award identifier for the specific contract record returned.</description>
    <label>Award ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>