force-app/main/default/objects/OA_USASpending_Staging__c/fields/Awarding_Agency__c.field-meta.xml
<CustomField>
    <fullName>Awarding_Agency__c</fullName>
    <description>Top-level federal agency that awarded the contract (e.g., Department of Defense).</description>
    <label>Awarding Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>