force-app/main/default/objects/OA_USASpending_Staging__c/fields/Awarding_Sub_Agency__c.field-meta.xml
<CustomField>
    <fullName>Awarding_Sub_Agency__c</fullName>
    <description>Sub-agency within the awarding department (e.g., Army Corps of Engineers under DoD). Returned by USASpending API. Useful for routing intelligence to the specific contracting office.</description>
    <label>Awarding Sub Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>