force-app/main/default/objects/OA_USASpending_Staging__c/fields/Before_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Before_Snapshot__c</fullName>
    <description>Pre-write JSON snapshot of the target Lead&apos;s mapped fields, captured before any write. Rollback source of truth.</description>
    <label>Before Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>