force-app/main/default/objects/OA_USASpending_Staging__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Award type label from USASpending (e.g., DEFINITIVE CONTRACT, DELIVERY ORDER).</description>
    <label>Contract Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>