force-app/main/default/objects/OA_USASpending_Staging__c/fields/Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Key__c</fullName>
    <description>Idempotency key = Enrichment_Run_ID__c + "|" + Award_ID__c. External Id + Unique so re-running an enrichment run upserts rather than duplicating staging rows.</description>
    <externalId>true</externalId>
    <label>Dedupe Key</label>
    <length>90</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>