force-app/main/default/objects/OA_USASpending_Staging__c/fields/Enrichment_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Run_ID__c</fullName>
    <description>UUID or timestamp slug identifying the batch run that produced this record. Groups all records from a single enrichment session for audit and selective re-run.</description>
    <label>Enrichment Run ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>