force-app/main/default/objects/OA_USASpending_Staging__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <description>Which gate failed, routing this staging row to the exception queue (no Lead write).</description>
    <label>Exception Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no-lead-uei</fullName>
            </value>
            <value>
                <fullName>no-staging-uei</fullName>
            </value>
            <value>
                <fullName>uei-mismatch</fullName>
            </value>
            <value>
                <fullName>ambiguous-uei</fullName>
            </value>
            <value>
                <fullName>uei-unverified</fullName>
            </value>
            <value>
                <fullName>malformed-uei</fullName>
            </value>
            <value>
                <fullName>no-provenance</fullName>
            </value>
            <value>
                <fullName>name-not-exact</fullName>
            </value>
            <value>
                <fullName>multiple-candidates</fullName>
            </value>
            <value>
                <fullName>parent-subsidiary</fullName>
            </value>
            <value>
                <fullName>missing-email</fullName>
            </value>
            <value>
                <fullName>call-complete-excluded</fullName>
            </value>
            <value>
                <fullName>duplicate-rule-block</fullName>
            </value>
            <value>
                <fullName>permission-block</fullName>
            </value>
            <value>
                <fullName>field-missing</fullName>
            </value>
            <value>
                <fullName>post-write-mismatch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>