force-app/main/default/objects/OA_USASpending_Staging__c/fields/Gate_Results__c.field-meta.xml
<CustomField>
    <fullName>Gate_Results__c</fullName>
    <label>Gate Results</label>
    <description>Full per-gate outcome log for this row (pass/fail per verification gate). Audit + post-write verification evidence.</description>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>