force-app/main/default/objects/OA_USASpending_Staging__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>USASpending Results</relationshipLabel>
    <relationshipName>USASpending_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>