force-app/main/default/objects/OA_USASpending_Staging__c/fields/Match_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Match_Confidence__c</fullName>
    <description>Derived from Name Match Score. HIGH=0.85+, MEDIUM=0.70-0.84, LOW=under 0.70. LOW records require manual review before any write-back.</description>
    <label>Match Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>