force-app/main/default/objects/OA_USASpending_Staging__c/fields/Name_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Name_Match_Score__c</fullName>
    <description>0.00 to 1.00 string similarity between Search Term and Recipient Name. Computed at insert time. Drives Match Confidence picklist.</description>
    <label>Name Match Score</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>