force-app/main/default/objects/OA_USASpending_Staging__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Reviewer comments and system-generated disambiguation warnings (e.g., Recipient Name contains words absent from Search Term).</description>
    <label>Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>