force-app/main/default/objects/OA_USASpending_Staging__c/fields/Performance_State__c.field-meta.xml
<CustomField>
    <fullName>Performance_State__c</fullName>
    <description>Two-letter state code for the place of performance on the award.</description>
    <label>Performance State</label>
    <length>5</length>
    <type>Text</type>
</CustomField>