force-app/main/default/objects/OA_USASpending_Staging__c/fields/Query_Date__c.field-meta.xml
<CustomField>
    <fullName>Query_Date__c</fullName>
    <description>Date the callout to USASpending.gov was made. Used to flag records older than 90 days as potentially stale.</description>
    <label>Query Date</label>
    <type>Date</type>
</CustomField>