force-app/main/default/objects/OA_USASpending_Staging__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Exact recipient name returned by USASpending.gov (e.g., BOOZ ALLEN HAMILTON INC). Compare against Search Term to assess match quality.</description>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>