force-app/main/default/objects/OA_USASpending_Staging__c/fields/Recipient_UEI__c.field-meta.xml
<CustomField>
    <fullName>Recipient_UEI__c</fullName>
    <description>Unique Entity Identifier returned by USASpending. Currently null for most legacy awards. Reserved for future cross-reference with SAM.gov data.</description>
    <label>Recipient UEI</label>
    <length>12</length>
    <type>Text</type>
</CustomField>