force-app/main/default/objects/OA_USASpending_Staging__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <description>Workflow gate. Pending=awaiting review. Approved=confirmed match, safe to write back. Rejected=wrong company. Written Back=data copied to Lead fields.</description>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Written Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>