force-app/main/default/objects/OA_USASpending_Staging__c/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <description>Company name string sent to the USASpending.gov API. Preserved for audit, disambiguation review, and enrichment run tracing.</description>
    <label>Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>