force-app/main/default/objects/OA_USASpending_Staging__c/fields/Source_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Source_Endpoint__c</fullName>
    <description>Full API endpoint URL used to retrieve this record. Audit traceability if multiple USASpending endpoints are added in future.</description>
    <label>Source Endpoint</label>
    <type>Url</type>
</CustomField>