force-app/main/default/objects/OA_USASpending_Staging__c/fields/Written_Back_By__c.field-meta.xml
<CustomField>
    <fullName>Written_Back_By__c</fullName>
    <label>Written Back By</label>
    <description>User or automation identity that performed the Lead write-back for this row.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Staging Rows Written Back</relationshipLabel>
    <relationshipName>Staging_Written_Back</relationshipName>
    <type>Lookup</type>
</CustomField>