force-app/main/default/objects/OA_USASpending_Staging__c/fields/Written_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Written_Back_Date__c</fullName>
    <description>Timestamp of the successful Lead write-back for this row.</description>
    <label>Written Back Date</label>
    <type>DateTime</type>
</CustomField>